Changes in Skills bar and change photo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohd Afzal - Web Developer from Trivandrum</title>
+    <title>Mohammed Afzal</title>
 
     <!-- 
     - favicon
@@ -118,7 +118,7 @@
           <div class="container">
             <div class="hero-banner">
               <img
-                src="./assets/images/afzal.JPG"
+                src="./assets/images/afzal1.JPG"
                 width="800"
                 height="864"
                 loading="lazy"
@@ -201,12 +201,12 @@
               </div>
 
               <div class="abs-icon abs-icon-3">
-                <ion-icon name="logo-angular"></ion-icon>
+                <ion-icon name="logo-react"></ion-icon>
               </div>
             </figure>
 
             <div class="about-content">
-              <p class="section-subtitle">I'm a Developer</p>
+              <p class="section-subtitle">I'm a MERN Developer</p>
 
               <h2 class="h2 section-title">
                 I Develop Application that Help People
@@ -385,14 +385,14 @@
               </li>
 
               <li class="skills-item">
-                <div class="wrapper" style="width: 50%">
+                <div class="wrapper" style="width: 80%">
                   <h3 class="skills-title">Javascript</h3>
 
-                  <data class="skills-data" value="50">50%</data>
+                  <data class="skills-data" value="80">80%</data>
                 </div>
 
                 <div class="skills-progress-box">
-                  <div class="skills-progress" style="width: 50%"></div>
+                  <div class="skills-progress" style="width: 80%"></div>
                 </div>
               </li>
 
@@ -409,14 +409,14 @@
               </li>
 
               <li class="skills-item">
-                <div class="wrapper" style="width: 70%">
+                <div class="wrapper" style="width: 60%">
                   <h3 class="skills-title">C</h3>
 
-                  <data class="skills-data" value="70">70%</data>
+                  <data class="skills-data" value="60">60%</data>
                 </div>
 
                 <div class="skills-progress-box">
-                  <div class="skills-progress" style="width: 70%"></div>
+                  <div class="skills-progress" style="width: 60%"></div>
                 </div>
               </li>
 
@@ -433,14 +433,14 @@
               </li>
 
               <li class="skills-item">
-                <div class="wrapper" style="width: 50%">
+                <div class="wrapper" style="width: 70%">
                   <h3 class="skills-title">Web Development</h3>
 
-                  <data class="skills-data" value="50">50%</data>
+                  <data class="skills-data" value="70">70%</data>
                 </div>
 
                 <div class="skills-progress-box">
-                  <div class="skills-progress" style="width: 50%"></div>
+                  <div class="skills-progress" style="width: 70%"></div>
                 </div>
               </li>
             </ul>
@@ -519,7 +519,9 @@
                     <div>
                       <h3 class="contact-item-title">Email</h3>
 
-                      <a href="mailto:afzal.afzal123@gmail.com" class="contact-item-link"
+                      <a
+                        href="mailto:afzal.afzal123@gmail.com"
+                        class="contact-item-link"
                         >afzal.afzal123@gmail.com</a
                       >
                     </div>
