--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="container">
             <div class="hero-banner">
               <img
-                src="./assets/images/afzal1.JPG"
+                src="./assets/images/afzallatest.jpg"
                 width="800"
                 height="864"
                 loading="lazy"
@@ -324,6 +324,28 @@
                     <p class="card-subtitle">Web Development</p>
 
                     <h3 class="h3 card-title">Coza Store</h3>
+
+                    <span class="btn-link">
+                      <span>View Project</span>
+
+                      <ion-icon name="arrow-forward"></ion-icon>
+                    </span>
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="https://github.com/afzal123afzal/Soccer-Circle.git"
+                  class="portfolio-card"
+                  style="
+                    background-image: url('./assets/images/football2.jpeg');
+                  "
+                >
+                  <div class="card-content">
+                    <p class="card-subtitle">MERN Stack WebDevelopment</p>
+
+                    <h3 class="h3 card-title">Soccer Circle</h3>
 
                     <span class="btn-link">
                       <span>View Project</span>
